design and card updates

--- a/index.html
+++ b/index.html
@@ -29,9 +29,19 @@
        <div class="main">
        
         <h1 class="main-heading" >Glassmorphic Credit Card</h1>
-        <div class="box-1"></div>
+        <div class="box-1">
+          <div class="card-logo"><img src="/Untitled_design_1_-removebg-preview.631ca0cce58337.11261255.png" alt="relief"></div>
+
+          <div class="card-number">3256 2335 5669 4566</div>
+        </div>
         <h1 class="main-heading" >Glassmorphic Identity Card</h1>
-        <div class="box-2"> </div>
+        <div class="box-2"> <div class="card2-logo"><img src="/Untitled_design_1_-removebg-preview.631ca0cce58337.11261255.png" alt="relief"></div>
+        <div class="img"><img src="/Metamask-icon.png" alt="Picture"></div>
+        <div class="card-name">SHASHANK PANDEY</div>
+        <div class="card-profes">B.TECH CSE </div>
+        <div class="college"> Institute of Technical Research and Education</div>
+        <div class="university">Siksha 'O' Anusandhan University</div>
+      </div>
         <h1 class="main-heading">Glassmorphic Banner</h1>
         <div class="box-3"> </div>
         <h1 class="main-heading">Glassmorphic Circle</h1>
