--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <nav id='menu'>
         <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
         <ul>
-          <li><a href='http://'>Home</a></li>
-          <li><a href='http://'>Contact Us</a></li>
+          <li><a href='index.html'>Home</a></li>
+          <li><a href='https://github.com/shashank-iter' target="_blank">Contact Us</a></li>
         </ul>
       </nav>
        <div class="main">
